index.css
/* entire web page */
body {
    margin: 0;
    background-color: black;
    color: white;
    font-family: Georgia, 'Times New Roman', Times, serif;
}
/* intro opening section */
#intro {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    text-align: center;
    padding: 40px;
}
/* main heading */
#intro h1 {
    font-size: 5rem;
    margin-bottom: 20px;
}
 /*description paragraph */
#intro p {
    max-width: 700px;
    line-height: 1.6;
    margin-bottom: 30px;
}
/* image styling */
#intro img {
    width: 350px;
    display: block;
    margin: 0 auto;
}
/* scroll text */
 .scroll-text {
    margin-top: 20px;
    font-size: 0.9rem;
    opacity: 0.7;
    text-align: center;
}
/* page one section */
.page-one {
  
  border-top: 1px solid white;
  border-bottom: 1px solid white;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    padding:  120px 100px;
    overflow-x: hidden;


}
/* left text block */
.page-one-text{
 width: 700px;
 font-size: 0.7rem;
}
/* page one heading */
.page-one h2 {
    font-size: 0.9rem;
    margin-bottom: 20px;
}
/* image row */
.image-row {
    display: flex;
    margin-top: 50px;
    margin-left: -155px;
}
/* distorted image */
.image-row img {
    width: 585px;

    margin-right: -120px;

    transform:
    rotate(5deg)
    scale(0.9)
    translateX(30px);

    filter:
    blur(1px)
    contrast(250%);

}
/* page two section */
.page-two {

    border-top: gray solid 1px;
    border-bottom: rgb(101, 101, 101) solid 1px;
    min-height: 100vh;

    overflow: hidden;

    padding: 120px 100px;
}
/* text block */
.page-two-text {
    width: 700px;
    font-size: 0.7rem;
    margin-bottom: 80px;
}
/* fragmented grid layout */
.fragmented-grid {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: 30px;
}
/* fragmented image */
.fragmented-grid img {
    width: 100%;
    height: 250px;
    object-fit: cover;

    filter: 
    contrast(180%)
    blur(1px);

    transition: 0.4s;
}
/* top left  */
.fragmented-grid img:nth-child(1) 
{
    transform: 
    rotate(-5deg) 
    translateY(-20px);
}
/* center */
.fragmented-grid img:nth-child(2) 
{
    transform: 
    skew(-4deg,3deg)
    translateX(20px);

    filter:
    contrast(220%)
    hue-rotate(40deg);
}
/* top right */
.fragmented-grid img:nth-child(3) 
{
    transform: 
    rotate(6deg)
    scale(0.9);
    filter:
    sepia(70%)
}
/* bottom left */
.fragmented-grid img:nth-child(4) 
{
    transform: 
    translateY(40px);

    opacity: 0.7;

    filter: grayscale(60%);
}
/* bottom right */
.fragmented-grid img:nth-child(5) 
{
    transform: 
    skew(5deg)
    translateX(-20px);
}
/* bottom center */
.fragmented-grid img:nth-child(6) 
{
    transform: 
    rotate(-7deg);
    
    filter:
    invert(0.1)
    contrast(300%);
}
/* hover effect */

.fragmented-grid img:hover
{

    transform:
    scale(1.05)
    rotate(-3deg);

    filter:
    contrast(250%);
}
/* page three */
.page-three 
{
 border-top: rgb(81, 81, 81) solid 1px;
    border-bottom: rgb(49, 49, 49) solid 1px;
    min-height: 100vh;

    overflow: hidden;

    padding: 120px 100px;


}

/* image stack */
.glitch-stack {
    position: relative;
    width: 500px;
    height: 700px;
    margin: 0 auto;
}
/* all images overlap */
.glitch-stack img {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
}
/* orginal image */
.base-img {
    position: relative;
    z-index: 1;
}
/* red layer */
.glitch-red {
    transform: translateX(-15px);

    opacity: 0.5;

    filter: 
    hue-rotate(-50deg)
    contrast(200%);

    mix-blend-mode: screen;

    z-index: 2;
    
}
/* green layer */
.glitch-blue {
    transform:
translateX(15px)
translateY(5px);

opacity: 0.5;

filter:
hue-rotate(120deg)
contrast(250%);

mix-blend-mode: lighten;

z-index: 3;

}
/* text under image */
.page-three-text {
    max-width: 500px;
    margin-left: auto;
    margin-top: 120px;
    text-align: right;
    font-size: 0.7rem;
    
}
/* heading */

.page-three h2{

    font-size: 1rem;

    margin-bottom: 20px;
}
/* page four */
.page-four {
    
    min-height: 130vh;

    overflow: visible;

    position: relative;
    /* overlap page three */
    margin-top: -150px;

}
/* text top right corner */
.page-four-text {
    position: relative;
    
    width: 500px;
    
    padding-top: 600px;
    padding-right: 100px;
    margin-left: auto;
    z-index: 10;
    text-align: right;
}
/* heading */
.page-four h2 {
    font-size: 1rem;
    margin-bottom: 30px;
}
/* paragraph */
.page-four p {
    font-size: 0.6rem;
    line-height: 1.8;
}
/* corrupted image */
.corrupted-img {
    position: absolute;
    
    left: 50px;
    /* intro page three */
    top: 20px;
    width: 700px;

    transform:
    rotate(-7deg)
    skew(-4deg);

}
/* all image layers overlap */
.corrupted-img img {
    position: absolute;
    
    width: 100%;
}
/* main image */
.main-corrupt {
    filter:
    grayscale(100%) 
    contrast(350%)
    brightness(40%)
    blur(2px);

    opacity: 0.9;

    mix-blend-mode: lighten;
    


}
/* red shadow */
.red-shadow {

    opacity: 0.5;

    transform: 
    translateX(-30px);
    
    filter:
    hue-rotate(-50deg)
    contrast(500%)
    blur(5px);

    mix-blend-mode: screen;
}
/* page five  */
.page-five {
    min-height: 220vh;
    
    position: relative;

    overflow: hidden;

    background: black;

}
/* text block */
.page-five-text {
    position: relative;
    z-index: 20;
    width: 600px;
    padding-top: 120px;
    padding-left: 80px;
}
/* heading */
.page-five h2 {
    font-size: 1rem;
    margin-bottom: 30px;
}
/* paragraph */
.page-five p {
    font-size: 0.6rem;
    line-height: 1.8;
}
/* gaint collage */
.overload-grid {
    position: absolute;
    inset: 0;
    width: 100%;
    height: 100%;

}
/* all images overlap */
.overload-grid img {
    position: absolute;
    width: 700px;

    opacity: 0.6;

    mix-blend-mode: screen;

    filter:
    contrast(300%)
    saturate(250%);
}
/* image 1 */
.overload-one {
    top: -100px;
    left: -150px;

    transform:
    rotate(-12deg)
    scale(1.2px);

}
/* image 2 */
.overload-two {
    top: 100px;
    right: -200px;

    transform:
    rotate(10deg);

    filter:
    hue-rotate(120deg)
    contrast(400%);
}
/* image 3 */
.overload-three {
    top: 500px;
    left: -100px;

    transform: skew(-8deg);

    opacity: 0.5;
}
/* image 4 */
.overload-four {
    top: 700px;
    right: -150px;
    transform:
    rotate(-18deg);

    filter:
    grayscale(100%)
    contrast(500%);
}
/* image 5 */
.overload-five {
    bottom: 600px;
    left: 150px;

     transform:
     scale(1.3);

     opacity: 0.4;
}
/* image 6 */
.overload-six {
    bottom: 300px;
    right: 100px;

    transform:
    rotate(15deg)
    scale(6deg);

    filter:
    hue-rotate(-60deg)
    contrast(600%);
}
/* image 7 */
.overload-seven {
    top: 300px;
    left: 500px;

    transform:
    rotate(22deg);

    opacity: 0.3;
    
    filter:
    hue-rotate(180deg)
    contrast(500%);
}
/* image 8 */
.overload-eight {
    bottom: 100px;
    left: -200px;
    transform:

    rotate(-10deg)
    skew(10deg);

    
    filter:

    grayscale(100%)
    contrast(700%);

    opacity: 0.5;
}
/* image 9 */
.overload-nine {
    top: 1100px;
    right: -100px;
    transform:
    scale(1.5)
    rotate(18deg);
    opacity: 0.2;
    filter:
    hue-rotate(250deg)
    contrast(800%);
}
/* adding ids */
#page-three {
 overflow: hidden;
}
#page-four {
    position: relative;
}
/* adding media querie from goggle */
@media (max-width: 768px) {

    body {
        overflow-x: hidden;
    }
     #intro h1 {
        font-size: 2.5rem;
    }
    .page-one
    .page-two
    .page-three
    .page-four
    .page-five {
        padding: 60px 20px;}
    .page-one-text
    .page-two-text
    .page-three-text
    .page-four-text
    .page-five-text {
        width: 100%;
    }
    .image-row {
        flex-direction: column;
        margin-left: 0;
    }
    .fragmented-grid {
        grid-template-columns: 1fr;
    }
    .image-row img,
    .fragmented-grid img,
    .corrupted-img,
    .overload-grid img {
        width: 100%;
        height: auto;
    }
    .glitch-stack {
        width: 100%;
        height: auto;
    }
}

